@@ -1,6 +1,9 @@
 package com.modeler.app;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 import org.json.*;
 
@@ -18,7 +21,7 @@ public class OpenTelemetryAdapter {
      */
     public static List<Claim> parse(String filePath) throws IOException {
         List<Claim> claims = new ArrayList<>();
-        String content = new String(java.nio.file.Files.readAllBytes(java.nio.file.Paths.get(filePath)));
+        String content = Files.readString(Paths.get(filePath), StandardCharsets.UTF_8);
         JSONArray spans = new JSONArray(content);
         for (int i = 0; i < spans.length(); i++) {
             JSONObject span = spans.getJSONObject(i);
